refactor: final 추가 및 toList()을 사용하도록 변경
- final 키워드 누락 부분에 final 키워드 추가
- 스트림의 collect()를 toList()방식으로 변경