@@ -11,7 +11,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MemberService {
@@ -33,7 +32,7 @@ public class MemberService {
 
         return members.stream()
                 .map(MemberResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
